# ocaml-rust-on-apple-silicon-demo

./: .gitignore  README.md
lib/: dune  rust_bindings.ml
rust/: Cargo.toml
rust/src/: lib.rs
